Collapse Fix

--- a/style.css
+++ b/style.css
@@ -903,7 +903,7 @@ li{
 .mapTool{
   margin: 50px 0px 15px;
   width: 81.6vw;
-  max-height: 500px;
+  height: 500px;
 }
 
 .mapColumn{
